tests/rosetta/transpiler/Pascal/array-concatenation.error
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /workspace/mochi/tests/rosetta/transpiler/Pascal/array-concatenation.pas
array-concatenation.pas(80,7) Note: Call to subroutine "operator :=(const source:Variant):LongInt;" marked as inline is not inlined
array-concatenation.pas(81,43) Note: Call to subroutine "operator :=(const source:LongInt):Variant;" marked as inline is not inlined
array-concatenation.pas(83,7) Note: Call to subroutine "operator :=(const source:Variant):LongInt;" marked as inline is not inlined
array-concatenation.pas(84,43) Note: Call to subroutine "operator :=(const source:LongInt):Variant;" marked as inline is not inlined
array-concatenation.pas(97,42) Error: Incompatible type for arg no. 1: Got "VariantArray", expected "{Open} Array Of LongInt"
array-concatenation.pas(110) Fatal: There were 1 errors compiling module, stopping
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode
